2003-02-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/depend.m4: Grep depcomp's stderr for icc warnings about
	ignored options.
	* lib/depcomp (icc): New mode.
	* tests/depcomp5.test: New file.
	* tests/defs.in: Handle required=icc.
	* tests/Makefile.am (TESTS): Add it.

	Temporary hack for PR automake/381:
	* automake.in (handle_gettext): Turn missing po/ and intl/ errors
	into -Wsyntax warnings.

2003-02-10  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* Makefile.am: Substitute @SHELL@ in automake.in and aclocal.in.
	This makes the setting of SHELL work for DJGPP.

2003-02-10  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/385:
	* lib/depcomp (makedepend): Strip any libtool call, before
	running makedepends.
	* tests/depcomp4.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	Reported by Jeff Squyres.

	Related to PR automake/385:
	* lib/depcomp (dashmstdout): Do not use `-o /dev/null', or gcc will
	write dependencies to /dev/null.  `-o /dev/null' was added
	on 2002-06-13 just because I tried to replace `-o foo.o' by something
	else and didn't thought about removing it entirely.
	* tests/depcomp3.test: New file.
	* tests/Makefile.am (TESTS): Add it.

	* automake.in (BEGIN): Override $ENV{'SHELL'} with ./configure's
	SHELL for DJGPP.
	Suggested by Richard Dawe.

2003-02-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS: Summarize recent changes.

	* automake.texi (FAQ, CVS, maintainer-mode, wildcards)
	(distcleancheck): New nodes.

2003-02-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_files): Don't complain that
	AM_INIT_AUTOMAKE comes from an old version if it was not found.

2003-02-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Recompute
	indexes of header files so we create stamp files with
	the right numbers when config.status is run on some headers.
	* tests/stamph2.test: Check for this.
	Reported by Sander Niemeijer.

2003-02-02  Jeremy Nimmer  <jwnimmer@alum.mit.edu>  (tiny change)
