@@ -9,6 +9,7 @@ Alan Modra		amodra@bigpond.net.au
 Alex Hornby		alex@anvil.co.uk
 Alexander Mai		st002279@hrzpub.tu-darmstadt.de
 Alexander V. Lukyanov	lav@yars.free.net
+Alexander Turbov	zaufi@sendmail.ru
 Alexandre Duret-Lutz	duret_g@epita.fr
 Alexey Mahotkin		alexm@hsys.msk.ru
 Andreas Buening		andreas.buening@nexgo.de
