@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -56,3 +56,11 @@ $AUTOMAKE --add-missing
 # user is using AM_GNU_GETTEXT([external]).
 grep 'with-included-gettext' Makefile.in && exit 1
 :
+
+# intl/ isn't wanted with AM_GNU_GETTEXT([external]).
+
+mkdir intl
+echo 'SUBDIRS = po intl' >Makefile.am
+$AUTOMAKE --add-missing 2>stderr && exit 1
+cat stderr
+grep 'intl.*AM_GNU_GETTEXT' stderr
