@@ -19,7 +19,10 @@ Bugs fixed in 1.7.2a:
     is troublesome with gcc and Solaris compilers. (PR/385)
   - makedepend mode: work with Libtool. (PR/385 too)
   - support for ICC.
-* Flag missing po/ and intl/ directories as warnings, not errors. (PR/381)
+* better support for unusual gettext setups, such as multiple po/ directories
+  (PR/381):
+  - Flag missing po/ and intl/ directories as warnings, not errors.
+  - Disable these warnings if po/ does not exist.
 * Noteworthy manual updates:
   - New FAQ chapter.
   - Document how AC_CONFIG_AUX_DIR interacts with missing files.
