@@ -1,5 +1,15 @@
 2003-02-11  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	Fix for PR automake/381:
+	* automake.in (handle_gettext): Do not print diagnostics
+	about po/ and intl/ missing from SUBDIRS if po/ does not
+	exist.  Warn if `SUBDIRS = intl' is used although libintl
+	is 'external'.
+	* tests/gettext.test: Make sure diagnostics are not output
+	when po/ does not exist.
+	* tests/gettext2.test: Test for unwanted intl/.
+	PR from Alexander Turbov, fix suggested by Bruno Haible.
+
 	* m4/depend.m4: Grep depcomp's stderr for icc warnings about
 	ignored options.
 	* lib/depcomp (icc): New mode.
